test/custom/elaboration/good/coreml_unused_type_variable.mle
let ['a 'b] id : 'a -> 'a = ['a 'b] fun (x : 'a) -> x[]
