test/custom/elaboration/bad/typeclass_free_variables.mle
class K 'a { k : 'a -> 'b }
